# lubo-

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-gui.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: build-android.yml  build-desktop.yml  publish-release.yml
android/: buildozer.spec  main.py  p4a_hook.py
android/manifest/: application.xml
android/service/: recorder_service.py
config/: config.ini
docs/: cross-platform-apps.md  platforms.md
douyinliverecorder/: __init__.py
douyinliverecorder/apps/: __init__.py
douyinliverecorder/core/: __init__.py  config.py  scheduler.py  url_store.py
douyinliverecorder/recorders/: __init__.py  ffmpeg.py  http_stream.py
lubo/: __init__.py
lubo/core/: config.py  events.py  models.py  scheduler.py
lubo/recorders/: ffmpeg.py  http_stream.py
lubo/resolvers/: __init__.py  base.py  douyin_web_backend.py  douyu_web_backend.py  selection.py  streamlink_backend.py  yt_dlp_backend.py
packaging/pyinstaller-hooks/: hook-av.py  hook-kivy.py
scripts/: build_android.sh  build_linux.sh  build_windows.ps1  prepare_packaged_config.py
src/: room.py  spider.py
tests/core/: test_config.py  test_events.py  test_models.py  test_scheduler.py  test_url_store.py
tests/packaging/: test_android_build.py  test_build_scripts.py
tests/recorders/: test_ffmpeg.py  test_http_stream.py
tests/resolvers/: __init__.py  test_douyin_web_backend.py  test_douyu_web_backend.py  test_selection.py  test_streamlink_backend.py  (+1 more)
(+35 files in other folders)
