[project]
name = "lubo-live-recorder"
version = "0.2.0a1"
description = "独立的多平台直播录制应用"
readme = "README.md"
authors = [{name = "zhangzhimiao1994"}]
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "streamlink==8.4.0",
    "yt-dlp==2026.6.9",
]

[project.optional-dependencies]
gui = [
    "kivy>=2.3.0",
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/zhangzhimiao1994/lubo-"
Documentation = "https://github.com/zhangzhimiao1994/lubo-#readme"
Repository = "https://github.com/zhangzhimiao1994/lubo-.git"
Issues = "https://github.com/zhangzhimiao1994/lubo-/issues"
